# sveetch-djangoapp-sample

./: CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  cookiebaked.json  freezer.py  frozen.txt  setup.cfg  sphinx_reload.py
djangoapp_sample/: __init__.py  apps.py  exceptions.py  urls.py
djangoapp_sample/factories/: __init__.py  blog.py
djangoapp_sample/migrations/: 0001_initial.py
djangoapp_sample/models/: __init__.py  article.py  blog.py
djangoapp_sample/plugins/: blog.py
djangoapp_sample/serializers/: article.py  blog.py
djangoapp_sample/templates/djangoapp_sample/: article_detail.html  base.html  blog_detail.html  blog_index.html  blog_plugin.html
djangoapp_sample/utils/: cms_api.py
djangoapp_sample/views/: article.py  blog.py
docs/: conf.py  development.rst  django_settings.py  history.rst  index.rst  install.rst  requirements.txt  sphinx_reload.py
docs/django_app/: index.rst  models.rst  serializers.rst  viewsets.rst
docs/references/: factories.rst  index.rst  models.rst  plugins.rst  serializers.rst  views.rst  viewsets.rst
frontend/: package.json
sandbox/: urls.py
sandbox/settings/: base.py  tests.py
sandbox/templates/: skeleton.html
sandbox/templates/menus/: flat.html
sandbox/templates/pages/: default.html  test.html
tests/: conftest.py
tests/010_models/: 011_blog.py  012_article.py
tests/020_factories/: 021_blog.py  022_article.py
tests/030_views/: 031_blog.py  032_article.py
tests/100_serializers/: 101_blog.py  102_article.py
tests/110_viewsets/: 111_blog.py  112_article.py
tests/200_plugins/: 0201_blog.py
